# sphinx-view

./: .gitignore  .project_metadata.json  .travis.yml  CHANGELOG.rst  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: deploy.yml
docs/: conf.py  index.rst  overview.rst  quickstart.rst  sview.rst
sview/: __init__.py  builder.py  exceptions.py  server.py
sview/utilities/: app.py
tests/: conftest.py  test_builder.py
tests/data/: single.md  single.rst
tests/data/directory/: index.rst
tests/data/package/: setup.py
tests/data/package/docs/: index.rst
tests/data/package/examples/: dummy.py
tests/data/package/svdummy/: __init__.py
