[tool.poetry]
name = "sphinx-view"
version = "0.3.1"
description = "View your rendered Sphinx or ReStructuredText documents in a browser"
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://sphinx-view.readthedocs.io/en/latest/"
documentation = "https://sphinx-view.readthedocs.io/en/latest/"
repository = "https://github.com/dusktreader/spinx-view"
packages = [ { include = "sview" } ]


[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
inflection = "^0.5.1"
livereload = "^2.6.3"
py-buzz = "^2.1.3"
Sphinx = "^4.2.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
pytest-flask = "^1.2.0"
pytest-catchlog = "^1.2.2"
isort = "^5.9.3"
flake8 = "^3.9.2"
pytest-random-order = "^1.0.4"
ipython = "^7.28.0"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.12.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--random-order --cov=sview --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.poetry.scripts]
sphinx-view = 'sview.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
